@@ -17,6 +17,10 @@ Gem::Specification.new do |spec|
   spec.executables   = ["slicing"]
   spec.require_paths = ["lib"]
 
+  spec.add_runtime_dependency 'thor' , '~> 0.19.1'
+
   spec.add_development_dependency "bundler", "~> 1.11"
   spec.add_development_dependency "rake", "~> 10.0"
+  # spec.add_development_dependency "minitest"
+
 end
